--- a/Playfields/GS_Ashon2/playfield_static.yaml
+++ b/Playfields/GS_Ashon2/playfield_static.yaml
@@ -531,16 +531,16 @@ POIs:
           # Adventure-focused starter equipment sets
           Items: [ 
            # EASY MODE - Adventure Welcome Package
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:6, PowerBar:6, Medikit02:4, AntidotePills:2, EmergencyRations:4, WaterBottle:3, EnergyCell:4, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:2, Battery:2, FoodProcessor:1, WoodLog:40, Stone:40, IronOre:40, CopperOre:40, SiliconOre:30", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:6, PowerBar:6, Medikit02:4, AntidotePills:2, EmergencyRations:4, WaterBottle:3, EnergyCell:4, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:2, Battery:2, FoodProcessor:1, WoodLogs:40, Stone:40, IronOre:40, CopperOre:40, SiliconOre:30", 
            
            # NORMAL MODE - Balanced Adventure Kit
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:4, PowerBar:4, Medikit02:3, AntidotePills:1, EmergencyRations:3, WaterBottle:2, EnergyCell:3, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLog:25, Stone:25, IronOre:25, CopperOre:25, SiliconOre:20", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:4, PowerBar:4, Medikit02:3, AntidotePills:1, EmergencyRations:3, WaterBottle:2, EnergyCell:3, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLogs:25, Stone:25, IronOre:25, CopperOre:25, SiliconOre:20", 
            
            # HARD MODE - Adventure Challenge
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:2, PowerBar:2, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, HeatResistantSuit:1, WoodLog:15, Stone:15, IronOre:15, CopperOre:15, SiliconOre:10", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:2, PowerBar:2, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, HeatResistantSuit:1, WoodLogs:15, Stone:15, IronOre:15, CopperOre:15, SiliconOre:10", 
            
            # FRESH START - New Adventure Experience
-           "#FreshStart: SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:3, PowerBar:3, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLog:20, Stone:20, IronOre:20, CopperOre:20, SiliconOre:15"
+           "#FreshStart: SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:3, PowerBar:3, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, HeatResistantSuit:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLogs:20, Stone:20, IronOre:20, CopperOre:20, SiliconOre:15"
           ]
 
 ### Drones
