--- a/Playfields/GS_Beech/playfield_static.yaml
+++ b/Playfields/GS_Beech/playfield_static.yaml
@@ -3818,16 +3818,16 @@ POIs:
           # Forest-focused starter equipment sets
           Items: [ 
            # EASY MODE - Forest Explorer Welcome Package
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:6, PowerBar:6, Medikit02:4, AntidotePills:2, EmergencyRations:4, WaterBottle:3, EnergyCell:4, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:2, Battery:2, FoodProcessor:1, WoodLogs:60, Stone:40, IronOre:40, CopperOre:40, SiliconOre:30, PlantProtein:20", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:6, PowerBar:6, Medikit02:4, AntidotePills:2, EmergencyRations:4, WaterBottle:3, EnergyCell:4, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:2, Battery:2, FoodProcessor:1, WoodLog:60, Stone:40, IronOre:40, CopperOre:40, SiliconOre:30, PlantProtein:20", 
            
            # NORMAL MODE - Balanced Forest Explorer Kit
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:4, PowerBar:4, Medikit02:3, AntidotePills:1, EmergencyRations:3, WaterBottle:2, EnergyCell:3, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLogs:40, Stone:25, IronOre:25, CopperOre:25, SiliconOre:20, PlantProtein:15", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:4, PowerBar:4, Medikit02:3, AntidotePills:1, EmergencyRations:3, WaterBottle:2, EnergyCell:3, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLog:40, Stone:25, IronOre:25, CopperOre:25, SiliconOre:20, PlantProtein:15", 
            
            # HARD MODE - Forest Survival Challenge
-           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:2, PowerBar:2, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, WoodLogs:25, Stone:15, IronOre:15, CopperOre:15, SiliconOre:10, PlantProtein:10", 
+           "SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:2, PowerBar:2, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, WoodLog:25, Stone:15, IronOre:15, CopperOre:15, SiliconOre:10, PlantProtein:10", 
            
            # FRESH START - New Forest Explorer Experience
-           "#FreshStart: SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:3, PowerBar:3, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLogs:30, Stone:20, IronOre:20, CopperOre:20, SiliconOre:15, PlantProtein:12"
+           "#FreshStart: SurvivalTool:1, Flashlight:1, SurvivalTent:1, RadarSuitT1:1, PDA:1, Bandages:3, PowerBar:3, Medikit02:2, AntidotePills:1, EmergencyRations:2, WaterBottle:1, EnergyCell:2, OreScanner:1, SmallConstructor:1, OxygenGenerator:1, WaterGenerator:1, SolarPanel:1, Battery:1, WoodLog:30, Stone:20, IronOre:20, CopperOre:20, SiliconOre:15, PlantProtein:12"
           ]
           
         # ==============================================================
@@ -3838,7 +3838,7 @@ POIs:
           Pos: [ 10771.0, 19.1, 417.2 ]
           RotY: 40
           Items: [
-            "SurvivalTool:1, Flashlight:1, PDA:1, Medikit02:5, PowerBar:10, EnergyCell:10, WoodLogs:100, PlantProtein:50"
+            "SurvivalTool:1, Flashlight:1, PDA:1, Medikit02:5, PowerBar:10, EnergyCell:10, WoodLog:100, PlantProtein:50"
           ]
 
 
